--- a/index.html
+++ b/index.html
@@ -17,41 +17,41 @@
 
 <body onLoad="charaHide()">
 	<div id="chara">
-		<div id="charaWait"><video src="taikiOut.mp4" height="1280" id="Wait" autoplay loop muted></video></div>
-		<div id="charaGreet"><video src="konnichiwaOut.mp4" height="1280" id="Greet"></video></div>
-		<div id="charaBus"><video src="busOut.mp4" height="1280" id="Bus"></video></div>
-		<div id="charaChikan"><video src="chikanOut.mp4" height="1280" id="Chikan"></video></div>
-		<div id="charaJun"><video src="junOut.mp4" height="1280" id="Jun"></video></div>
-		<div id="charaBye"><video src="otefuriOut.mp4" height="1280" id="Bye"></video></div>
-		<div id="charaDensha"><video src="denshaichiOut.mp4" height="1280" id="Densha"></video></div>
-		<div id="charaIdol"><video src="idolOut.mp4" height="1280" id="Idol"></video></div>
-		<div id="charaKeiiku"><video src="keiikuOut.mp4" height="1280" id="Keiiku"></video></div>
-		<div id="charaBot"><video src="linebotOut.mp4" height="1280" id="Bot"></video></div>
-		<div id="charaMiraikan"><video src="miraikanOut.mp4" height="1280" id="Miraikan"></video></div>
-		<div id="charaCo2"><video src="co2Out.mp4" height="1280" id="Co2"></video></div>
-		<div id="charaProve"><video src="proveOut.mp4" height="1280" id="Prove"></video></div>
-		<div id="charaSaikawa"><video src="saikawaOut.mp4" height="1280" id="Saikawa"></video></div>
-		<div id="charaJikoshoukai"><video src="jikoshoukaiOut.mp4" height="1280" id="Jikoshoukai"></video></div>
-		<div id="charaIcar"><video src="icarOut.mp4" height="1280" id="Icar"></video></div>
-		<div id="charaName"><video src="namaeOut.mp4" height="1280" id="Name"></video></div>
-		<div id="charaKawaii"><video src="kawaiiOut.mp4" height="1280" id="Kawaii"></video></div>
-		<div id="charaNenrei"><video src="nenreiOut.mp4" height="1280" id="Nenrei"></video></div>
-		<div id="charaMenu"><video src="menuOut.mp4" height="1280" id="Menu"></video></div>
-		<div id="charaYonda"><video src="yondaOut.mp4" height="1280" id="Yonda"></video></div>
-		<div id="charaBukatsu"><video src="bukatsuOut.mp4" height="1280" id="Bukatsu"></video></div>
-		<div id="charaPants"><video src="pants_dameOut.mp4" height="1280" id="Pants"></video></div>
-		<div id="charaOshiete"><video src="oshieteageruOut.mp4" height="1280" id="Oshiete"></video></div>
-		<div id="charaNyan"><video src="nyanOut.mp4" height="1280" id="Nyan"></video></div>
-		<div id="charaOtouto"><video src="otoutoOut.mp4" height="1280" id="Otouto"></video></div>
-		<div id="charaGannbaruzo"><video src="gannbaruzoiOut.mp4" height="1280" id="Gannbaruzo"></video></div>
-		<div id="charaTabemono"><video src="tabemonoOut.mp4" height="1280" id="Tabemono"></video></div>
-		<div id="charaType"><video src="typeOut.mp4" height="1280" id="Type"></video></div>
-		<div id="charaUta"><video src="utaOut.mp4" height="1280" id="Uta"></video></div>
-		<div id="charaChoki"><video src="jyanken_chokiOut.mp4" height="1280" id="Choki"></video></div>
-		<div id="charaGu"><video src="jyanken_guOut.mp4" height="1280" id="Gu"></video></div>
-		<div id="charaPa"><video src="jyanken_paOut.mp4" height="1280" id="Pa"></video></div>
-		<div id="charaYobikomi"><video src="yobikomiOut.mp4" height="1280" id="Yobikomi"></video></div>
-		<div id="charaShutoko"><video src="shutokoOut.mp4" height="1280" id="Shutoko"></video></div>
+		<div id="charaWait"><video src="mp4/taikiOut.mp4" height="1280" id="Wait" autoplay loop muted></video></div>
+		<div id="charaGreet"><video src="mp4/konnichiwaOut.mp4" height="1280" id="Greet"></video></div>
+		<div id="charaBus"><video src="mp4/busOut.mp4" height="1280" id="Bus"></video></div>
+		<div id="charaChikan"><video src="mp4/chikanOut.mp4" height="1280" id="Chikan"></video></div>
+		<div id="charaJun"><video src="mp4/junOut.mp4" height="1280" id="Jun"></video></div>
+		<div id="charaBye"><video src="mp4/otefuriOut.mp4" height="1280" id="Bye"></video></div>
+		<div id="charaDensha"><video src="mp4/denshaichiOut.mp4" height="1280" id="Densha"></video></div>
+		<div id="charaIdol"><video src="mp4/idolOut.mp4" height="1280" id="Idol"></video></div>
+		<div id="charaKeiiku"><video src="mp4/keiikuOut.mp4" height="1280" id="Keiiku"></video></div>
+		<div id="charaBot"><video src="mp4/linebotOut.mp4" height="1280" id="Bot"></video></div>
+		<div id="charaMiraikan"><video src="mp4/miraikanOut.mp4" height="1280" id="Miraikan"></video></div>
+		<div id="charaCo2"><video src="mp4/co2Out.mp4" height="1280" id="Co2"></video></div>
+		<div id="charaProve"><video src="mp4/proveOut.mp4" height="1280" id="Prove"></video></div>
+		<div id="charaSaikawa"><video src="mp4/saikawaOut.mp4" height="1280" id="Saikawa"></video></div>
+		<div id="charaJikoshoukai"><video src="mp4/jikoshoukaiOut.mp4" height="1280" id="Jikoshoukai"></video></div>
+		<div id="charaIcar"><video src="mp4/icarOut.mp4" height="1280" id="Icar"></video></div>
+		<div id="charaName"><video src="mp4/namaeOut.mp4" height="1280" id="Name"></video></div>
+		<div id="charaKawaii"><video src="mp4/kawaiiOut.mp4" height="1280" id="Kawaii"></video></div>
+		<div id="charaNenrei"><video src="mp4/nenreiOut.mp4" height="1280" id="Nenrei"></video></div>
+		<div id="charaMenu"><video src="mp4/menuOut.mp4" height="1280" id="Menu"></video></div>
+		<div id="charaYonda"><video src="mp4/yondaOut.mp4" height="1280" id="Yonda"></video></div>
+		<div id="charaBukatsu"><video src="mp4/bukatsuOut.mp4" height="1280" id="Bukatsu"></video></div>
+		<div id="charaPants"><video src="mp4/pants_dameOut.mp4" height="1280" id="Pants"></video></div>
+		<div id="charaOshiete"><video src="mp4/oshieteageruOut.mp4" height="1280" id="Oshiete"></video></div>
+		<div id="charaNyan"><video src="mp4/nyanOut.mp4" height="1280" id="Nyan"></video></div>
+		<div id="charaOtouto"><video src="mp4/otoutoOut.mp4" height="1280" id="Otouto"></video></div>
+		<div id="charaGannbaruzo"><video src="mp4/gannbaruzoiOut.mp4" height="1280" id="Gannbaruzo"></video></div>
+		<div id="charaTabemono"><video src="mp4/tabemonoOut.mp4" height="1280" id="Tabemono"></video></div>
+		<div id="charaType"><video src="mp4/typeOut.mp4" height="1280" id="Type"></video></div>
+		<div id="charaUta"><video src="mp4/utaOut.mp4" height="1280" id="Uta"></video></div>
+		<div id="charaChoki"><video src="mp4/jyanken_chokiOut.mp4" height="1280" id="Choki"></video></div>
+		<div id="charaGu"><video src="mp4/jyanken_guOut.mp4" height="1280" id="Gu"></video></div>
+		<div id="charaPa"><video src="mp4/jyanken_paOut.mp4" height="1280" id="Pa"></video></div>
+		<div id="charaYobikomi"><video src="mp4/yobikomiOut.mp4" height="1280" id="Yobikomi"></video></div>
+		<div id="charaShutoko"><video src="mp4/shutokoOut.mp4" height="1280" id="Shutoko"></video></div>
 	</div>
 	</div>
 </body>
